@@ -5,6 +5,7 @@
   * If a hostname resolves to multiple ip addresses, try as many as needed to find one that works.
   * Add NGETRC environment variable to specify alternate config file directly.
   * Extend removal of identical dupe downloaded files to also cover incomplete/broken files. (Based on patch from Bram)
+  * Add "update" and "updateage" -R keywords to select based upon when items were added to the cache.
 
 2003-12-27 v0.26:
   * Add simplest possible example to manpage.
